--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,12 @@
     </head>
     <body>
         <div class="app">
-            <h1>Apache Cordova hacked</h1>
+            <h1>Apache Cordova new hacked</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
+			<p class="blink">Ready on iOS/Android</p>
         </div>
         <script type="text/javascript" src="../cordova-2.3.0.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
