--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     			}, function(err) {
          			navigator.notification.alert(err);
     			}, 'Echo', 'echo',
-				[ "this is a native Call on Android" ]);
+				[ "this IS another a native Call on Android" ]);
 			}
 		</script>
         
