--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     			}, function(err) {
          			navigator.notification.alert(err);
     			}, 'Echo', 'echo',
-				[ "Markus is a github god!!11einself" ]);
+				[ "Basti is a github god!!11einself" ]);
 			}
 		</script>
         
