--- a/src/index.html
+++ b/src/index.html
@@ -26,23 +26,14 @@
         <title>Hello World</title>
         
         <script type="text/javascript"> 			
-			function displayHello(){
+			function sendUdpPackage(){
 				PhoneGap.exec(
 				   function(succ) {
          			navigator.notification.alert(succ);
     			}, function(err) {
          			navigator.notification.alert(err);
-    			}, 'Echo', 'echo',
-				[ "Basti is a github god!!11einself" ]);
-			}
-			function displayHello2(){
-				PhoneGap.exec(
-				   function(succ) {
-         			navigator.notification.alert(succ);
-    			}, function(err) {
-         			navigator.notification.alert(err);
-    			}, 'Echo', 'blubba',
-				[ "Basti is a github god!!11einself" ]);
+    			}, 'UdpController', 'switchPower',
+				[ "admin", "anel", "Sw_on", "1", "192.168.1.8", 75 ]);
 			}
 		</script>
         
@@ -56,7 +47,7 @@
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
-            <a href="#" class="btn" onclick="javascript:displayHello()"><h1>Alert Message</h1>  </a>
+            <input type="button" value="Alert Message" onclick="sendUdpPackage()"/>
 			<p class="blink">Ready on iOS/Android</p>
         </div>
         <script type="text/javascript" src="../cordova-2.3.0.js">navigator.notification.alert("name");</script>
