--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         
         <script type="text/javascript"> 			
 			function sendUdpPackage(){
-				PhoneGap.exec(
+				Cordova.exec(
 				   function(succ) {
          			navigator.notification.alert(succ);
     			}, function(err) {
