--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
      KIND, either express or implied.  See the License for the
     specific language governing permissions and limitations
     under the License.
+    Test 3
 -->
 <html>
     <head>
