index.html und index.css bearbeitet

--- a/src/index.html
+++ b/src/index.html
@@ -41,14 +41,18 @@
     </head>
     <body>
 
+	<dic class="socket_control">
+	    <input type="button" style="width: 95%" href="#" class="btn" onclick="javascript:displayHello()" value="Dose 1">
+	</div>
 
         <div class="app">
-            <h1>Apache Cordova new hacked</h1>
+            <h1>Anel power Control</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
-            <a href="#" class="btn" onclick="javascript:displayHello()"><h1>Alert Message</h1>  </a>
+            <input type="button" href="#" class="btn" onclick="javascript:displayHello()" value="Alert Message">
+            <a href="#" class="btn" onclick="javascript:displayHello()"><h1>Button 2</h1>  </a>
 			<p class="blink">Ready on iOS/Android</p>
         </div>
         <script type="text/javascript" src="../cordova-2.3.0.js">navigator.notification.alert("name");</script>
