--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     			}, function(err) {
          			navigator.notification.alert(err);
     			}, 'UdpController', 'switchPower',
-				[ "admin", "anel", "wer da?", "1", "255.255.255.255", 75, 1027]);
+				[ "Sw_off1adminanel", "192.168.1.8", 75, 1027]);
 			}
 			function setupPortForwarding(){
 				Cordova.exec(
