--- a/project-android/assets/www/src/index.html
+++ b/project-android/assets/www/src/index.html
@@ -78,30 +78,30 @@
 	<div id="socket_control" class="socket_control">
 	    <button name="Dose 1" type="button"  value="Dose 1" onclick="javascript:displayDose1();">
 	    	<p>
-	    		<div id="socket_status_picture" > <img src="http://cdn1.iconfinder.com/data/icons/CrystalClear/128x128/actions/exit.png" width="50" height="50" alt="Power off"> </div>
+	    		<div id="socket_status_picture" > <img src="http://cdn1.iconfinder.com/data/icons/CrystalClear/128x128/actions/exit.png" height="5%" alt="Power off"> </div>
 	    		<div id="socket_name" ><b>Dose 1 </b> </div>
-	    		<div id="socket_device_icon"><img src="http://icons.iconarchive.com/icons/deleket/sleek-xp-basic/48/Lamp-icon.png" width="50" height="50" alt="Lamp icon"></div>
+	    		<div id="socket_device_icon"><img src="http://icons.iconarchive.com/icons/deleket/sleek-xp-basic/48/Lamp-icon.png" height="5%" alt="Lamp icon"></div>
     		</p>
     	</button>
     	<button name="Dose 1" type="button" value="Dose 2" onclick="javascript:displayDose2();">
 	    	<p>
-	    		<div id="socket_status_picture" > <img src="http://cdn1.iconfinder.com/data/icons/CrystalClear/128x128/actions/exit.png" width="50" height="50" alt="Power off"> </div>
-	    		<div id="socket_name" ><b>Dose 2 </b> </div>
-	    		<div id="socket_device_icon"><img src="http://icons.iconarchive.com/icons/deleket/sleek-xp-basic/48/Lamp-icon.png" width="50" height="50" alt="Lamp icon"></div>
+	    		<div id="socket_status_picture" > <img src="http://cdn1.iconfinder.com/data/icons/CrystalClear/128x128/actions/exit.png" height="5%" alt="Power off"> </div>
+	    		<div id="socket_name" ><b>Dose 2 123456789012345678901234567890 </b> </div>
+	    		<div id="socket_device_icon"><img src="http://icons.iconarchive.com/icons/deleket/sleek-xp-basic/48/Lamp-icon.png" height="5%" alt="Lamp icon"></div>
     		</p>
     	</button>
     	<button name="Dose 1" type="button" value="Dose 3" onclick="javascript:displayDose3();">
 	    	<p>
-	    		<div id="socket_status_picture" > <img src="http://cdn1.iconfinder.com/data/icons/CrystalClear/128x128/actions/exit.png" width="50" height="50" alt="Power off"> </div>
+	    		<div id="socket_status_picture" > <img src="http://cdn1.iconfinder.com/data/icons/CrystalClear/128x128/actions/exit.png" height="5%" alt="Power off"> </div>
 	    		<div id="socket_name" ><b>Dose 3 </b> </div>
-	    		<div id="socket_device_icon"><img src="http://icons.iconarchive.com/icons/deleket/sleek-xp-basic/48/Lamp-icon.png" width="50" height="50" alt="Lamp icon"></div>
+	    		<div id="socket_device_icon"><img src="http://icons.iconarchive.com/icons/deleket/sleek-xp-basic/48/Lamp-icon.png" height="5%" alt="Lamp icon"></div>
     		</p>
     	</button>
     	<button name="Dose 1" type="button" value="Dose 4" onclick="javascript:displayDose4();">
 	    	<p>
-	    		<div id="socket_status_picture" > <img src="http://cdn1.iconfinder.com/data/icons/CrystalClear/128x128/actions/exit.png" width="50" height="50" alt="Power off"> </div>
+	    		<div id="socket_status_picture" > <img src="http://cdn1.iconfinder.com/data/icons/CrystalClear/128x128/actions/exit.png" height="5%" alt="Power off"> </div>
 	    		<div id="socket_name" ><b>Dose 4 </b> </div>
-	    		<div id="socket_device_icon"><img src="http://icons.iconarchive.com/icons/deleket/sleek-xp-basic/48/Lamp-icon.png" width="50" height="50" alt="Lamp icon"></div>
+	    		<div id="socket_device_icon"><img src="http://icons.iconarchive.com/icons/deleket/sleek-xp-basic/48/Lamp-icon.png" height="5%" alt="Lamp icon"></div>
     		</p>
     	</button>
 	    		
@@ -111,8 +111,8 @@
 	
 	<div id="menu_tabs" class="menu_tabs">
 		<ul>
-			<li  class="active"><a href="#" title="Steuerung"> <img src="http://png-3.findicons.com/files/icons/1684/ravenna/48/sound_mixer.png" width="50" height="50" alt="Control" > Steuerung</a></li>
-			<li><a href="#" title="Administration"><img src="http://png-4.findicons.com/files/icons/329/simple/48/settings.png" width="50" height="50" alt="Settings">Administration</a></li>
+			<li  class="active"><a href="#" title="Steuerung"> <img src="http://png-3.findicons.com/files/icons/1684/ravenna/48/sound_mixer.png" height="5%" alt="Control" > Steuerung</a></li>
+			<li><a href="#" title="Administration"><img src="http://png-4.findicons.com/files/icons/329/simple/48/settings.png" height="5%" alt="Settings">Administration</a></li>
 		</ul>
 	</div>
 	
