--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
      KIND, either express or implied.  See the License for the
     specific language governing permissions and limitations
     under the License.
-    Test 4
+    Test 5
 -->
 <html>
     <head>
@@ -86,7 +86,7 @@
     	<button name="Dose 1" type="button" value="Dose 2" onclick="javascript:displayDose2();">
 	    	<p>
 	    		<div id="socket_status_picture" > <img src="http://cdn1.iconfinder.com/data/icons/CrystalClear/128x128/actions/exit.png" height="5%" alt="Power off"> </div>
-	    		<div id="socket_name" ><b>Dose 2 123456789012345678901234567890 </b> </div>
+	    		<div id="socket_name" ><b>Dose 2</b> </div>
 	    		<div id="socket_device_icon"><img src="http://icons.iconarchive.com/icons/deleket/sleek-xp-basic/48/Lamp-icon.png" height="5%" alt="Lamp icon"></div>
     		</p>
     	</button>
