iOS design overwork

--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
 					<td class="socket_text">
 						<table  class="table_socket_text" border="0">
 							<tr><td class="socket_standard_name">Dose&nbsp;2</td></tr>
-							<tr><td class="socket_name" id="socket_name_2">Computer jfksafb dfjkasjfl fsdjklfsdaj djsaklfjlkj sdjfklsjajk jsdskljdskjkjf fj ksdajljf </td></tr>
+							<tr><td class="socket_name" id="socket_name_2">Falls ein Benutzer einen zu langen Namen wählt </td></tr>
 						</table>
 					</td>
 					<td class="socket_icon"><img src="img/pc_icon.png" class="socket_device_icon" id="socket_status_2" style="opacity:0.3" alt="Lamp icon"></td>
@@ -119,7 +119,7 @@
         </div>
         
         
-        <div id="menu" class="show">
+        <div id="menu" class="hide">
             <table class="menu_table header" id="menu_header_table" border="0">
                 <tr >
                     <td class ="tabs active" id="ctrl" href="#steuerung">
