max-height min-height menu iOS works

--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
         <div id="menu" class="hide">
             <table class="menu_table header" id="menu_header_table" border="0">
                 <tr >
-                    <td class ="tabs active" id="ctrl" href="#steuerung">
+                    <td class ="tabs" id="ctrl" href="#steuerung">
                         	<img src="img/control.png" class="menu_header_img" alt="Control"> 
                         	Steuerung
                     </td>
