iOS specific css element in activeTabSwitcher (bottom:1em)

--- a/src/index.html
+++ b/src/index.html
@@ -122,11 +122,11 @@
         <div id="menu" class="hide">
             <table class="menu_table header" id="menu_header_table" border="0">
                 <tr >
-                    <td class ="tabs" id="ctrl" href="#steuerung">
+                    <td class ="tabs" id="ctrl">
                         	<img src="img/control.png" class="menu_header_img" alt="Control"> 
                         	Steuerung
                     </td>
-                    <td class="tabs" id="admin" href"#administration">
+                    <td class="tabs" id="admin">
                         <img src="img/settings.png" class="menu_header_img" alt="Settings">
 						Einstellung
                     </td>
