--- a/src/app.html
+++ b/src/app.html
@@ -6,15 +6,18 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>AnelPwrCtrl</title>
+   	<script src="http://cdn.sencha.com/touch/sencha-touch-2.2.0-rc/sencha-touch-all.js"></script>
     <script>
         Ext = Ext || {};
         Ext.theme = {
             name: "Default"
         };
     </script>
-    <script src="http://cdn.sencha.com/touch/sencha-touch-2.2.0-rc/sencha-touch-all.js"></script>
+
     <link rel="stylesheet" href="http://cdn.sencha.com/touch/sencha-touch-2.2.0-rc/resources/css/sencha-touch.css">
     <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="js/webtoolkit.base64.js"></script>
+    <script type="text/javascript" src="../cordova-2.3.0.js"></script>
 </head>
 <body></body>
 </html>
