Timer work further

--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,7 @@
     </script>
 
     <link rel="stylesheet" href="http://cdn.sencha.com/touch/sencha-touch-2.2.0-rc/resources/css/sencha-touch.css">
+    <link rel="stylesheet" href="css/app.css">
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="js/webtoolkit.base64.js"></script>
     <script type="text/javascript" src="../cordova-2.3.0.js"></script>
